--- a/index.html
+++ b/index.html
@@ -501,6 +501,24 @@
             </li>
           </ul>
         </div>
+
+        <form class="foot-form">
+          <b class="appeal">Подпишитесь на рассылку</b>
+          <div class="foot-box">
+            <input
+              class="foot-input"
+              type="email"
+              name="email"
+              placeholder="E-mail"
+            />
+            <button class="foot-btn" type="submit">
+              Подписаться
+              <svg class="foot-svg" width="24" height="24">
+                <use href="./images/icons.svg#icon-send"></use>
+              </svg>
+            </button>
+          </div>
+        </form>
       </div>
     </footer>
 
@@ -511,6 +529,42 @@
             <use href="./images/icons.svg#icon-close"></use>
           </svg>
         </button>
+
+        <form class="modal-form">
+          <p class="paragraph">Оставьте свои данные, мы Вам перезвоним</p>
+          <div class="form-field">
+            <label for="name">Имя</label>
+            <input type="text" name="name" id="name" />
+          </div>
+
+          <div class="form-field">
+            <label for="tel">Телефон</label>
+            <input type="tel" name="tel" id="tel" />
+          </div>
+
+          <div class="form-field">
+            <label for="mail">Почта</label>
+            <input type="email" name="mail" id="mail" />
+          </div>
+
+          <div class="form-field">
+            <label for="comment">Комментарий</label>
+            <textarea
+              name="comment"
+              id="comment"
+              rows="10"
+              placeholder="Введите текст"
+            ></textarea>
+          </div>
+
+          <div class="form-policy">
+            <input type="checkbox" name="policy" id="policy" />
+            <label for="policy">Соглашаюсь с рассылкой и принимаю</label>
+            <a href="">Условия договора</a>
+          </div>
+
+          <button class="modal-btn" type="submit">Отправить</button>
+        </form>
       </div>
     </div>
     <script src="./js/modal.js"></script>
