--- a/portfolio.html
+++ b/portfolio.html
@@ -390,6 +390,24 @@
             </li>
           </ul>
         </div>
+
+        <form class="foot-form">
+          <b class="appeal">Подпишитесь на рассылку</b>
+          <div class="foot-box">
+            <input
+              class="foot-input"
+              type="email"
+              name="email"
+              placeholder="E-mail"
+            />
+            <button class="foot-btn" type="submit">
+              Подписаться
+              <svg class="foot-svg" width="24" height="24">
+                <use href="./images/icons.svg#icon-send"></use>
+              </svg>
+            </button>
+          </div>
+        </form>
       </div>
     </footer>
   </body>
