--- a/index.html
+++ b/index.html
@@ -559,8 +559,10 @@
 
           <div class="form-policy">
             <input type="checkbox" name="policy" id="policy" />
-            <label for="policy">Соглашаюсь с рассылкой и принимаю</label>
-            <a href="">Условия договора</a>
+            <label for="policy"
+              >Соглашаюсь с рассылкой и принимаю
+              <a href="">Условия договора</a></label
+            >
           </div>
 
           <button class="modal-btn" type="submit">Отправить</button>
