--- a/index.html
+++ b/index.html
@@ -530,40 +530,48 @@
           </svg>
         </button>
 
-        <form class="modal-form">
+        <form class="modal-form" autocomplete="off">
           <p class="paragraph">Оставьте свои данные, мы Вам перезвоним</p>
-          <div class="form-field">
-            <label for="name">Имя</label>
-            <input type="text" name="name" id="name" />
-          </div>
+          <label class="form-field">
+            <span>Имя</span>
+            <input type="text" name="name" />
+            <svg class="form-svg" width="18" height="18">
+              <use href="./images/icons.svg#icon-person"></use>
+            </svg>
+          </label>
 
-          <div class="form-field">
-            <label for="tel">Телефон</label>
-            <input type="tel" name="tel" id="tel" />
-          </div>
+          <label class="form-field">
+            <span>Телефон</span>
+            <input type="tel" name="tel" />
+            <svg class="form-svg" width="18" height="18">
+              <use href="./images/icons.svg#icon-phone"></use>
+            </svg>
+          </label>
 
-          <div class="form-field">
-            <label for="mail">Почта</label>
-            <input type="email" name="mail" id="mail" />
-          </div>
+          <label class="form-field">
+            <span>Почта</span>
+            <input type="email" name="mail" />
+            <svg class="form-svg" width="18" height="18">
+              <use href="./images/icons.svg#icon-email"></use>
+            </svg>
+          </label>
 
-          <div class="form-field">
-            <label for="comment">Комментарий</label>
+          <label class="form-field">
+            <span>Комментарий</span>
             <textarea
               name="comment"
-              id="comment"
               rows="10"
               placeholder="Введите текст"
             ></textarea>
-          </div>
+          </label>
 
-          <div class="form-policy">
-            <input type="checkbox" name="policy" id="policy" />
-            <label for="policy"
+          <label class="form-policy">
+            <input type="checkbox" name="policy" />
+            <span for="policy"
               >Соглашаюсь с рассылкой и принимаю
-              <a href="">Условия договора</a></label
+              <a href="">Условия договора</a></span
             >
-          </div>
+          </label>
 
           <button class="modal-btn" type="submit">Отправить</button>
         </form>
