Добавляет кастомный чекбокс

--- a/index.html
+++ b/index.html
@@ -566,7 +566,7 @@
           </label>
 
           <label class="form-policy">
-            <input type="checkbox" name="policy" />
+            <input class="checkbox" type="checkbox" name="policy" />
             <span for="policy"
               >Соглашаюсь с рассылкой и принимаю
               <a href="">Условия договора</a></span
