Фиксит бордер у чекбокса

--- a/index.html
+++ b/index.html
@@ -567,10 +567,10 @@
 
           <label class="form-policy">
             <input class="checkbox" type="checkbox" name="policy" />
-            <span for="policy"
+            <span
               >Соглашаюсь с рассылкой и принимаю
-              <a href="">Условия договора</a></span
-            >
+              <a href="">Условия договора</a>
+            </span>
           </label>
 
           <button class="modal-btn" type="submit">Отправить</button>
