Добавляет пробел между словами в модальном окне

--- a/index.html
+++ b/index.html
@@ -568,9 +568,9 @@
           <label class="form-policy">
             <input class="checkbox" type="checkbox" name="policy" />
             <span
-              >Соглашаюсь с рассылкой и принимаю
-              <a href="">Условия договора</a>
-            </span>
+              >Соглашаюсь с рассылкой и принимаю&nbsp;
+              <a href="">Условия договора</a></span
+            >
           </label>
 
           <button class="modal-btn" type="submit">Отправить</button>
